--- a/intro-esp32/.cargo/config.toml
+++ b/intro-esp32/.cargo/config.toml
@@ -4,35 +4,42 @@
 #target = "xtensa-esp32s2-espidf"
 #target = "xtensa-esp32s3-espidf"
 target = "riscv32imc-esp-espidf"
-#rustflags = ["--cfg", "espidf_time64"] # Extending time_t for esp-idf v5: https://github.com/esp-rs/rust/issues/110
 
 [target.xtensa-esp32-espidf]
 linker = "ldproxy"
-runner = "espflash --monitor"
+runner = "espflash --monitor" # Select this runner for espflash v1.x.x
+#runner = "espflash flash --monitor" # Select this runner for espflash v2.x.x
+#rustflags = ["--cfg", "espidf_time64"] # Extending time_t for ESP IDF 5: https://github.com/esp-rs/rust/issues/110
 
 [target.xtensa-esp32s2-espidf]
 linker = "ldproxy"
-runner = "espflash --monitor"
+runner = "espflash --monitor" # Select this runner for espflash v1.x.x
+#runner = "espflash flash --monitor" # Select this runner for espflash v2.x.x
+#rustflags = ["--cfg", "espidf_time64"] # Extending time_t for ESP IDF 5: https://github.com/esp-rs/rust/issues/110
 
 [target.xtensa-esp32s3-espidf]
 linker = "ldproxy"
-runner = "espflash --monitor"
+runner = "espflash --monitor" # Select this runner for espflash v1.x.x
+#runner = "espflash flash --monitor" # Select this runner for espflash v2.x.x
+#rustflags = ["--cfg", "espidf_time64"] # Extending time_t for ESP IDF 5: https://github.com/esp-rs/rust/issues/110
 
 [target.riscv32imc-esp-espidf]
 linker = "ldproxy"
-runner = "espflash --monitor"
-
-# Future - necessary for the experimental "native build" of esp-idf-sys with ESP32C3
-# See also https://github.com/ivmarkov/embuild/issues/16
+#runner = "espflash --monitor /dev/cu.usbserial-141150 --speed 230400" # Select this runner for espflash v1.x.x
+runner = "espflash --monitor /dev/cu.usbserial-141140 --speed 460800" # Select this runner for espflash v1.x.x
+#runner = "espflash flash --monitor" # Select this runner for espflash v2.x.x
+# Future - necessary for the experimental "native build" of esp-idf-sys with ESP32C3. See also https://github.com/ivmarkov/embuild/issues/16
+# For ESP-IDF 5 add `espidf_time64` and for earlier versions - remove this flag: https://github.com/esp-rs/rust/issues/110
 rustflags = ["-C", "default-linker-libraries"]
 
 [unstable]
+
 build-std = ["std", "panic_abort"]
 #build-std-features = ["panic_immediate_abort"] # Required for older ESP-IDF versions without a realpath implementation
 
 [env]
-# Note: these variables are not used when using pio builder
-# Enables the esp-idf-sys "native" build feature (`cargo build --features native`) to build against ESP-IDF stable (v4.4)
-ESP_IDF_VERSION = { value = "branch:release/v4.4" }
-# Enables the esp-idf-sys "native" build feature (`cargo build --features native`) to build against ESP-IDF master (mainline)
-#ESP_IDF_VERSION = { value = "master" }
+# Note: these variables are not used when using pio builder (`cargo build --features pio`)
+# Builds against ESP-IDF stable (v4.4)
+ESP_IDF_VERSION = "release/v4.4"
+# Builds against ESP-IDF master (mainline)
+#ESP_IDF_VERSION = "master"
