--- a/intro-esp32/Cargo.toml
+++ b/intro-esp32/Cargo.toml
@@ -13,34 +13,40 @@ debug = true # Symbols are nice and they don't increase the size on Flash
 opt-level = "z"
 
 [features]
-default = ["experimental"]
-experimental = ["esp-idf-svc/experimental", "esp-idf-hal/experimental", "embedded-svc/experimental"]
+#default = ["experimental"]
+#experimental = ["esp-idf-svc/experimental", "esp-idf-hal/experimental", "embedded-svc/experimental"]
 #pio = ["esp-idf-sys/pio"]
 
 [dependencies]
 anyhow = {version = "1"}
 log = "0.4"
-esp-idf-sys = { version = "0.31.11", features = ["binstart"] }
-#esp_idf = "0.1.1"
-esp-idf-svc = "0.42.5"
-esp-idf-hal = "0.38.1"
-#esp-idf-part = "0.1.1"
+build-time = "0.1.2"
+
+esp-idf-sys = { version = "0.32.1", features = [
+    "binstart"
+]}
+
+esp-idf-svc = { version = "0.45.0", features = [
+    "std",
+    "nightly",
+    "experimental",
+    "embassy-time-driver",
+    "embassy-time-isr-queue",
+    "alloc"
+]}
+
+esp-idf-hal = { version = "0.40.1", features = [
+    "default",
+    "embassy-sync",
+    "critical-section",
+    "edge-executor"
+]}
 
 ssd1306 = "0.7.1"
 embedded-graphics = "0.7.1"
-embedded-svc = "0.22.3"
+embedded-svc = "0.24.0"
 embedded-hal = "0.2"
-#smol = "1.2.5"
-
-#[patch.crates-io]
-#smol = { git = "https://github.com/esp-rs-compat/smol" }
-#polling = { git = "https://github.com/esp-rs-compat/polling" }
-#socket2 = { git = "https://github.com/esp-rs-compat/socket2" }
-#getrandom = { version = "0.2", git = "https://github.com/esp-rs-compat/getrandom.git" }
-#getrandom1 = { version = "0.1", git = "https://github.com/esp-rs-compat/getrandom.git", package = "getrandom", branch = "0.1" }
-#embedded-io = { git = "https://github.com/ivmarkov/embedded-io" }
+display-interface = "0.4.1"
 
 [build-dependencies]
-embuild = "0.30"
-anyhow = "1"
-
+embuild = "0.31.0"
