--- a/intro-esp32/Cargo.toml
+++ b/intro-esp32/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "cdl2022-esp32"
+name = "intro-esp32"
 version = "0.1.0"
 authors = ["Sylvain Wallez <sylvain@bluxte.net>"]
 edition = "2021"
@@ -13,9 +13,6 @@ debug = true # Symbols are nice and they don't increase the size on Flash
 opt-level = "z"
 
 [features]
-#default = ["experimental"]
-#experimental = ["esp-idf-svc/experimental", "esp-idf-hal/experimental", "embedded-svc/experimental"]
-#pio = ["esp-idf-sys/pio"]
 
 [dependencies]
 anyhow = {version = "1"}
